Updating code to fix/unit tests