@@ -1,22 +1,12 @@
 package com.laderrco.fortunelink.portfolio_management.application.mappers;
 
-import java.math.BigDecimal;
-import java.time.Instant;
 import java.util.List;
-import java.util.stream.Collectors;
-
 import com.laderrco.fortunelink.portfolio_management.application.responses.TransactionResponse;
 import com.laderrco.fortunelink.portfolio_management.domain.models.entities.Transaction;
-import com.laderrco.fortunelink.portfolio_management.domain.models.enums.TransactionType;
-import com.laderrco.fortunelink.portfolio_management.domain.models.valueobjects.Fee;
 import com.laderrco.fortunelink.portfolio_management.domain.models.valueobjects.MarketAssetInfo;
-import com.laderrco.fortunelink.portfolio_management.domain.models.valueobjects.ids.TransactionId;
-import com.laderrco.fortunelink.shared.valueobjects.Money;
 
 public class TransactionMapper {
-    private TransactionMapper() {
-        // Private con to prevent instantiation
-    }
+    private TransactionMapper() {}
 
     /**
      * Converts a single Transaction entity to a TransactionResponse record.
@@ -30,39 +20,28 @@ public class TransactionMapper {
             return null;
         }
 
-        TransactionId transactionId = transaction.getTransactionId();
-        TransactionType type = transaction.getTransactionType();
-        String symbol = transaction.getAssetIdentifier().getPrimaryId();
-        BigDecimal quantity = transaction.getQuantity();
-        Money price = transaction.getPricePerUnit();
-
-        // Extract fees as a list
-        List<Fee> fees = transaction.getFees() != null ? transaction.getFees() : List.of();
-
-        Money totalCost = transaction.calculateTotalCost();
-
-        Instant date = transaction.getTransactionDate();
-
-        String notes = transaction.getNotes();
-
-        if (assetInfo != null) {
-            // this is what we would do
-            // response.setAssetName(assetInfo.getName());
-            // response.setAssetType(assetInfo.getAssetType());
-            // response.setSector(assetInfo.getSector());
-            // response.setExchange(assetInfo.getExchange());
-        }
-        
-        return new TransactionResponse(transactionId, type, symbol, quantity, price, fees, totalCost, date, notes);
+        // Using clear local variables or passing directly to constructor
+        return new TransactionResponse(
+            transaction.getTransactionId(),
+            transaction.getTransactionType(),
+            transaction.getAssetIdentifier().getPrimaryId(),
+            transaction.getQuantity(),
+            transaction.getPricePerUnit(),
+            transaction.getFees() != null ? transaction.getFees() : List.of(),
+            transaction.calculateTotalCost(),
+            transaction.getTransactionDate(),
+            transaction.getNotes()
+            // In the future, you'd add assetInfo fields here as constructor arguments
+        );
     }
 
-    public List<TransactionResponse> toResponseList(List<Transaction> transactions) {
-        if (transactions == null) {
-            return null;
+    public static List<TransactionResponse> toResponseList(List<Transaction> transactions) {
+        if (transactions == null || transactions.isEmpty()) {
+            return List.of();
         }
 
         return transactions.stream()
             .map(t -> toResponse(t, null))
-            .collect(Collectors.toList());
+            .toList();
     }
 }
